Bug 1178159 - Ignore stroke-linecap:"square" on circle and ellipse. r=longsonr